feat(kwservice,nvim,install): update for kwservice; and install nvim from binaries
Signed-off-by: marslo <marslo.jiao@gmail.com>